# linux-windows-raspipico

./: CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md
docs/: BAREMETAL.md  LINUX.md  WINDOWS.md  WINLIN.md
src/: CMakeLists.txt  main.cpp
src/lib/: calc.cpp  calc.hpp
test/: CMakeLists.txt
